// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellActions should render checked checkbox 1`] = `
<form
  className="tc-list-checkbox"
>
  <div
    className="checkbox"
  >
    <label
      htmlFor="extend-25-check"
    >
      <input
        checked={true}
        id="extend-25-check"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        <span
          className="sr-only"
        >
          Fish multi-byte Savings Account
        </span>
      </span>
    </label>
  </div>
</form>
`;

exports[`CellActions should render unchecked checkbox 1`] = `
<form
  className="tc-list-checkbox"
>
  <div
    className="checkbox"
  >
    <label
      htmlFor="extend-25-check"
    >
      <input
        checked={false}
        id="extend-25-check"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        <span
          className="sr-only"
        >
          Fish multi-byte Savings Account
        </span>
      </span>
    </label>
  </div>
</form>
`;
